update website menus

--- a/contato.qmd
+++ b/contato.qmd
@@ -7,7 +7,7 @@
 
 #### Entre em contato
 
--   Conheça de perto nossas [soluções:]{style="color: red;"} seja para contratar nossos [serviços e produtos de dados]{style="color: red;"} ou propor [parcerias]{style="color: red;"}. Adorariamos conhecer suas demandas e propor soluções de dados para resolvê-las. 
+-   Conheça de perto nossas [soluções:]{style="color: red;"} seja para contratar/testar nossos [serviços e produtos de dados]{style="color: red;"} ou propor [parcerias]{style="color: red;"}. Adorariamos conhecer suas demandas e propor soluções de dados para resolvê-las. 
 
 
 ##### Nossos canais são:
